feat: add project to time-entries
