# openapi.json
@@ -60,6 +60,25 @@
                     }
                 }
             },
+            "Project": {
+                "type": "object",
+                "example": {
+                    "id": 19394,
+                    "name": "ING Main Building"
+                },
+                "required": [
+                    "id",
+                    "name"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    }
+                }
+            },
             "TimeEntry": {
                 "type": "object",
                 "example": {
@@ -73,6 +92,7 @@
                 "required": [
                     "id",
                     "at",
+                    "project",
                     "billable",
                     "started_at"
                 ],
@@ -96,6 +116,10 @@
                     "stopped_at": {
                         "type": "string",
                         "format": "date-time"
+                    },
+                    "project": {
+                        "type": "object",
+                        "$ref": "#/components/schemas/Project"
                     }
                 }
             },
